added the validation module

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "prebuild": "mkdir -p WebContent/javascript && mkdir -p WebContent/bootstrap",
     "copy-jquery": "cp -f node_modules/jquery/dist/jquery.js WebContent/javascript",
     "copy-knockout": "cp -f node_modules/knockout/build/output/knockout-latest.js WebContent/javascript",
+    "copy-knockout-validation": "cp -f node_modules/knockout.validation/dist/knockout.validation.js WebContent/javascript",
     "copy-bootstrap": "cp -R node_modules/bootstrap/dist/ WebContent/bootstrap",
-    "build": "npm run copy-jquery & npm run copy-knockout & npm run copy-bootstrap"
+    "build": "npm run copy-jquery & npm run copy-knockout & npm run copy-bootstrap & npm run copy-knockout-validation"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
-    "knockout": "^3.4.2"
+    "knockout": "^3.4.2",
+    "knockout.validation": "^2.0.3"
   }
 }
